scss/info.scss
.info{
  color:#FFFFFF;
  font-size: 14px;
  background: #1C1C1C;
  display: flex;
  width: 100%;
  height: 596px;

.left-info{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  .logo2{
    width: 389px;
height: 169px;
  }
}
.right-info{
  padding-right: 130px;
  display: flex;
  justify-content: center;
  gap:50px;
  flex-direction: column;
  width: 50%;
.info-box{
  display: flex;
  justify-content: space-around;
  .titl{
    display: flex;
    flex-direction: row;
  }
  .square{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 20px;
    width: 50px;
    height: 50px;
    background: #E27866;
    border-radius:25px;
  }
}
}
}
@media (max-width: 900px){
.info{
  height: 990px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-direction: column;
  padding: 40px 0;
  .left-info{
    width: 100%;
    .logo2{
      padding-bottom:20px;
      width: 70%;
      height: 100%;
    }
  }
  .right-info{
    padding: 0 80px;
    width: 100%;
    align-items:center;
    justify-content: center;
    .info-box{
      align-items:center;
    }
  }
}

}

